#978 - Add ES based feature search
- adapt to changes in the index file
- update openapi file